# pm3000

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
assets-orig/: icon-change-team.xcf  icon-convert-coach.xcf  icon-load.xcf  icon-save.xcf  icon-settings.xcf  loading.xcf
src/: game_utils.cpp  game_utils.h  gfx.cpp  gfx.h  input.cpp  input.h  io.cpp  io.h  main.cpp  pm3_data.cpp  pm3_data.h  pm3_defs.hh  pm3_utils.cpp  pm3_utils.hh  rnc_decompress.cpp  rnc_decompress.hpp  settings.h  swos_extract.cpp  swos_extract.hpp  swos_import.cpp  swos_import.h  text.cpp  text.h  ui.cpp  ui.h
src/config/: constants.h
src/screens/: change_team_screen.cpp  change_team_screen.h  convert_coach_screen.cpp  convert_coach_screen.h  first_time_screen.cpp  first_time_screen.h  free_players_screen.cpp  free_players_screen.h  load_game_screen.cpp  load_game_screen.h  loading_screen.cpp  loading_screen.h  must_load_game_screen.cpp  must_load_game_screen.h  my_team_screen.cpp  my_team_screen.h  save_game_screen.cpp  save_game_screen.h  scout_screen.cpp  scout_screen.h  screen.h  settings_screen.cpp  settings_screen.h  telephone_screen.cpp  telephone_screen.h  test_font_screen.cpp  test_font_screen.h
tests/: pm3_utils_tests.cpp  pricing_samples.csv  test_game_utils.cpp  test_gfx.cpp  test_input.cpp  test_io.cpp  test_pm3_data.cpp  test_text.cpp  test_ui.cpp
tools/: fifa_import_tool.cpp  inspect_pm3_data.cpp  swos_import_tool.cpp
tools/sprites/: palette-map.json
tools/sprites/extractor/: README.md  (+2 more)
(+3 files in other folders)
